# claude-session-inspector

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: session-inspector.md
src/claude_session_inspector/: __init__.py  formatting.py  inspection.py  search.py  server.py  sessions.py
tests/: __init__.py  test_formatting.py  test_search.py  test_server.py  test_sessions.py
