[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-introspect"
version = "0.1.1"
description = "MCP server for introspecting Claude Code session history — browse, search, read, and query past conversations"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
]

[project.scripts]
claude-introspect = "claude_session_inspector.server:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/claude_session_inspector"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
